--- a/Boston.ipynb
+++ b/Boston.ipynb
@@ -6,6 +6,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "# Imports\n",
     "import numpy as np\n",
     "import pandas as pd\n",
     "import matplotlib.pyplot as plt\n",
@@ -696,7 +697,7 @@
    "source": [
     "# Plotting correlation\n",
     "# Will help in interpreting the results\n",
-    "# By removing colinear features if required\n",
+    "# By removing colinear features IF REQUIRED\n",
     "\n",
     "plt.figure(figsize=(15,8))\n",
     "sns.heatmap(df.corr(),annot = True)\n",
@@ -827,30 +828,6 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "Index(['RM', 'LSTAT'], dtype='object')"
-      ]
-     },
-     "execution_count": 11,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "sel = SelectFromModel(RandomForestRegressor())\n",
-    "sel.fit(features,targets)\n",
-    "sel.get_support()\n",
-    "selected_feat= features.columns[(sel.get_support())]\n",
-    "selected_feat"
-   ]
-  },
-  {
-   "cell_type": "code",
    "execution_count": 12,
    "metadata": {},
    "outputs": [
@@ -941,10 +918,13 @@
     }
    ],
    "source": [
-    "scaler = StandardScaler()\n",
-    "df_scaled = df.copy()\n",
-    "df_scaled[train_cols] = scaler.fit_transform(df_scaled[train_cols])\n",
-    "display(df_scaled[train_cols].head())"
+    "# Not going to use scaled features so commenting it out\n",
+    "# as it is a simple data set so I'll avoid all inverse transform hassle here\n",
+    "\n",
+    "#scaler = StandardScaler()\n",
+    "# df_scaled = df.copy()\n",
+    "# df_scaled[train_cols] = scaler.fit_transform(df_scaled[train_cols])\n",
+    "# display(df_scaled[train_cols].head())"
    ]
   },
   {
